#11590 omit catalog name in generated queries for Informix
Former-commit-id: 5d7ec5c96af2f281c0fd6462224da15946d91091
Former-commit-id: 735eeb76361e072c1bfde50c5b2b3df3a642233c [formerly 3490d223dc01cf48f843a026c00460851ff3966e]
Former-commit-id: 4c9baa74182493621e755dd8e97e04bae5ecf393

--- a/plugins/org.jkiss.dbeaver.ext.generic/plugin.xml
+++ b/plugins/org.jkiss.dbeaver.ext.generic/plugin.xml
@@ -239,6 +239,7 @@
                     <parameter name="query-get-active-db" value="SELECT ODB_DBName FROM SysMaster:informix.SysOpenDB WHERE ODB_IsCurrent = 'Y' AND ODB_SessionID = DBINFO('sessionid')"/>
                     <parameter name="query-set-active-db" value="DATABASE ?"/>
                     <parameter name="legacy-sql-dialect" value="true"/>
+                    <parameter name="omit-catalog-name" value="true"/>
 
                     <parameter name="ddl-drop-column-short" value="true"/>
 
