--- a/plugins/org.jkiss.dbeaver.ui.search/src/org/jkiss/dbeaver/ui/search/internal/UISearchMessages.properties
+++ b/plugins/org.jkiss.dbeaver.ui.search/src/org/jkiss/dbeaver/ui/search/internal/UISearchMessages.properties
@@ -10,7 +10,7 @@ dialog_search_objects_combo_starts_with = Starts with
 dialog_search_objects_group_object_types = Object Types
 dialog_search_objects_group_objects_source = Objects Source
 dialog_search_objects_item_list_info = You have to set search query
-dialog_search_objects_label_name_match = Name match
+dialog_search_objects_label_match_type = Match type
 dialog_search_objects_label_object_name = Object Name
 dialog_search_objects_message_no_objects_like_ = No objects like "{0}" in "{1}"
 dialog_search_objects_message_objects_found = \ objects found
