#11986 change default behavior for omit catalog name setting
Former-commit-id: 5a5c14b6f1f5b77c7bba838278958c5b6c791fc0
Former-commit-id: 24b7ae1cb3171198c3b8f98b2ff74864b8943559 [formerly e217f3da63867bd3ac6d9ef562057fb06dd2a3b5]
Former-commit-id: e400cc14be1e2e94af9b4ff441d74cb9634611ee

--- a/plugins/org.jkiss.dbeaver.ext.generic/plugin.xml
+++ b/plugins/org.jkiss.dbeaver.ext.generic/plugin.xml
@@ -160,6 +160,7 @@
                     <property id="ddl-drop-column-brackets" label="Drop column - use brackets" description="Use 'ALTER TABLE DROP (column-name)'" type="boolean" required="false" defaultValue="false"/>
                     <property id="legacy-sql-dialect" label="Use legacy SQL dialect for DDL" description="Use legacy SQL dialect for DDL" type="boolean" required="false" defaultValue="false"/>
                     <property id="alter-table-add-column" label="Add COLUMN keyword in alter table query" description="Add COLUMN keyword after keyword ADD and before column name in alter table query" type="boolean" required="false" defaultValue="false"/>
+                    <property id="omit-catalog-name" label="Omit catalog name in queries" description="Omit catalog name in generated queries" type="boolean" required="false" defaultValue="false"/>
                 </propertyGroup>
                 <propertyGroup label="Formatting" description="SQL values formats">
                     <property id="native-format-timestamp" label="Timestamp format" description="Format pattern for timestamp columns" type="string" required="false"/>
@@ -239,7 +240,7 @@
                     <parameter name="query-get-active-db" value="SELECT ODB_DBName FROM SysMaster:informix.SysOpenDB WHERE ODB_IsCurrent = 'Y' AND ODB_SessionID = DBINFO('sessionid')"/>
                     <parameter name="query-set-active-db" value="DATABASE ?"/>
                     <parameter name="legacy-sql-dialect" value="true"/>
-                    <parameter name="omit-catalog-name" value="true"/>
+                    <parameter name="omit-catalog-name" value="false"/>
 
                     <parameter name="ddl-drop-column-short" value="true"/>
 
