#10370 add search in comments option to ctrl + shift + d dialog
Former-commit-id: 0f8c378219dcf94f6dc5643772219f9dcf2cf60e
Former-commit-id: cf0c627511f2b575f3bfa6113fcc6dce4ca13d71 [formerly d74e1b8d16d80f4db331c1713730ad2b7c06c2e3]
Former-commit-id: e1d91a317582a71edc41cb219fd0870f2c24fc53

--- a/plugins/org.jkiss.dbeaver.ui.navigator/src/org/jkiss/dbeaver/ui/internal/UINavigatorMessages.properties
+++ b/plugins/org.jkiss.dbeaver.ui.navigator/src/org/jkiss/dbeaver/ui/internal/UINavigatorMessages.properties
@@ -205,3 +205,4 @@ error_deleting_resource_message = Error deleting''{0}''
 question_no_sql_available = No SQL script available. \nAre you sure you want to proceed?
 error_sql_generation_title = Script generation error
 error_sql_generation_message = Error generating alter script
+dialog_search_objects_search_in_comments = Search in comments
