Update source file UINavigatorMessages.properties
Former-commit-id: e9058482f56cb835743ca598257f867f10b243c8
Former-commit-id: cebacd3e73cf16d7fd3e7818f61b11e6eef5c2bc [formerly b5e792d654c5c8572ede6f75cfe448d0ffa775e0]
Former-commit-id: 654084e67cd57bb4708046675ee0d9183397c164

--- a/plugins/org.jkiss.dbeaver.ui.navigator/src/org/jkiss/dbeaver/ui/internal/UINavigatorMessages.properties
+++ b/plugins/org.jkiss.dbeaver.ui.navigator/src/org/jkiss/dbeaver/ui/internal/UINavigatorMessages.properties
@@ -54,6 +54,7 @@ dialog_project_create_wizard_error_cannot_create = Create error
 dialog_project_create_wizard_error_cannot_create_message = Cannot create project
 dialog_project_create_wizard_title = Project Create Wizard
 dialog_project_goto_object_title = Open Database Object in
+dialog_project_goto_object_checkbox_search_in_comments = Search in comments
 
 registry_entity_editor_descriptor_description = Object properties
 registry_entity_editor_descriptor_name = Properties
