--- a/plugins/org.jkiss.dbeaver.ui.editors.data/src/org/jkiss/dbeaver/ui/controls/resultset/internal/ResultSetMessages.properties
+++ b/plugins/org.jkiss.dbeaver.ui.editors.data/src/org/jkiss/dbeaver/ui/controls/resultset/internal/ResultSetMessages.properties
@@ -140,6 +140,12 @@ dialog_filter_value_edit_table_description_label = Description
 dialog_filter_value_edit_table_description_description = Row description composed of dictionary columns
 dialog_filter_value_edit_table_count_label = Count
 dialog_filter_value_edit_table_count_description = Amount of rows associated with this value
+dialog_filter_value_edit_table_checkbox_case_insensitive_label = Case-insensitive
+dialog_filter_value_edit_table_checkbox_case_insensitive_description = Perform case-insensitive search.\nMay be slow for big tables without indexes.
+dialog_filter_value_edit_table_checkbox_read_from_server_label = Read from server
+dialog_filter_value_edit_table_checkbox_read_from_server_description = Read possible values from the database, otherwise use already fetched values.\nMay be slow for big tables.
+dialog_filter_value_edit_table_checkbox_show_row_count_label = Show row count
+dialog_filter_value_edit_table_checkbox_show_row_count_description = Show row count for each dictionary value.\nMay be slow for big tables.
 
 dialog_control_label_massage=Message
 dialog_cursor_view_monitor_rows_fetched = \ rows fetched
