#11095 add possibility to save 'copy as' configurations from the context menu in result set
Former-commit-id: ce78b79556a82899fc6e1b477f0991efe8821468
Former-commit-id: 32542c7b52fa5e2827ab50811d5adcccc9d52f50 [formerly 6c868926c6dd540cbcde54d0c6f52e8de3f3e9a1]
Former-commit-id: 501282679d8e2e703d9d56b43e544f07907a0cff

--- a/plugins/org.jkiss.dbeaver.ui.editors.data/src/org/jkiss/dbeaver/ui/controls/resultset/internal/ResultSetMessages.properties
+++ b/plugins/org.jkiss.dbeaver.ui.editors.data/src/org/jkiss/dbeaver/ui/controls/resultset/internal/ResultSetMessages.properties
@@ -157,6 +157,10 @@ dialog_toolbar_show_all=Show All
 dialog_toolbar_show_none=Show None
 dialog_toolbar_sort=Sort
 
+dialog_copy_as_configuration_name = Configure 'Copy as...' commands
+dialog_copy_as_configuration_error_saving_processor_properties_title = Unable to save configuration
+dialog_copy_as_configuration_error_saving_processor_properties_message = Configuration has not been saved due to an error
+
 pref_page_content_cache_blob = Cache BLOB values
 pref_page_content_cache_clob = Cache CLOB values
 
