--- a/plugins/org.jkiss.dbeaver.ui.editors.data/src/org/jkiss/dbeaver/ui/controls/resultset/internal/ResultSetMessages.properties
+++ b/plugins/org.jkiss.dbeaver.ui.editors.data/src/org/jkiss/dbeaver/ui/controls/resultset/internal/ResultSetMessages.properties
@@ -157,7 +157,7 @@ dialog_toolbar_show_all=Show All
 dialog_toolbar_show_none=Show None
 dialog_toolbar_sort=Sort
 
-dialog_copy_as_configuration_name = Configure 'Copy as...' commands
+dialog_copy_as_configuration_name = Configure 'Copy as' commands ...
 dialog_copy_as_configuration_error_saving_processor_properties_title = Unable to save configuration
 dialog_copy_as_configuration_error_saving_processor_properties_message = Configuration has not been saved due to an error
 
