--- a/plugins/org.jkiss.dbeaver.ui.navigator/plugin.xml
+++ b/plugins/org.jkiss.dbeaver.ui.navigator/plugin.xml
@@ -482,7 +482,7 @@
             <activeWhen><reference definitionId="org.jkiss.dbeaver.core.ui.navigator.part"/></activeWhen>
             <enabledWhen>
                 <with variable="selection">
-                    <count value="1"/>
+                    <count value="+"/>
                     <iterate operator="and">
                         <and>
                             <instanceof value="org.jkiss.dbeaver.model.navigator.DBNNode"/>
@@ -496,7 +496,7 @@
             <activeWhen><reference definitionId="org.jkiss.dbeaver.core.ui.navigator.part"/></activeWhen>
             <enabledWhen>
                 <with variable="selection">
-                    <count value="1"/>
+                    <count value="+"/>
                     <iterate operator="and">
                         <and>
                             <instanceof value="org.jkiss.dbeaver.model.navigator.DBNNode"/>
