--- a/plugins/org.jkiss.dbeaver.ext.oracle/plugin.xml
+++ b/plugins/org.jkiss.dbeaver.ext.oracle/plugin.xml
@@ -173,7 +173,7 @@
                                             <items ref="ProcedureArgumentAttributes"/>
                                         </items>
                                     </items>
-                                    <folder type="org.jkiss.dbeaver.ext.oracle.model.OracleDependency" label="%tree.dependencies.node.name" description="Table dependency/dependent objects">
+                                    <folder type="org.jkiss.dbeaver.ext.oracle.model.OracleDependency" label="%tree.dependencies.node.name" description="Procedure dependency/dependent objects">
                                         <items label="%tree.dependency.node.name" path="dependency" property="dependencies" icon="platform:/plugin/org.jkiss.dbeaver.ui/icons/file/link.png">
                                             <items label="%tree.dependencies.node.name" path="entry" property="entries" navigable="false" inline="true">
                                             </items>
@@ -193,7 +193,7 @@
                                 <items label="%tree.arguments.node.name" itemLabel="%tree.argument.node.name" path="argument" property="parameters" icon="#argument" navigable="false" inline="false">
                                     <items ref="ProcedureArgumentAttributes"/>
                                 </items>
-                                <folder type="org.jkiss.dbeaver.ext.oracle.model.OracleDependency" label="%tree.dependencies.node.name" description="Table dependency/dependent objects">
+                                <folder type="org.jkiss.dbeaver.ext.oracle.model.OracleDependency" label="%tree.dependencies.node.name" description="Procedure dependency/dependent objects">
                                     <items label="%tree.dependency.node.name" path="dependency" property="dependencies" icon="platform:/plugin/org.jkiss.dbeaver.ui/icons/file/link.png">
                                         <items label="%tree.dependencies.node.name" path="entry" property="entries" navigable="false" inline="true">
                                         </items>
