#12149 JNA deps version configuration
Former-commit-id: 79ee3169ae9b7fffddeee673f932788391d2fd0c
Former-commit-id: bb5323663f1cf1f435a31d2d1ec65ab3e43f8c90 [formerly 3536e3d5723bb5e4689eae981979fa0774dfd3ab]
Former-commit-id: 0068636a5d65ac40b5abb3bcc016d22a62fe578c

--- a/features/org.jkiss.dbeaver.rcp.feature/pom.xml
+++ b/features/org.jkiss.dbeaver.rcp.feature/pom.xml
@@ -1,14 +1,50 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd" xmlns="http://maven.apache.org/POM/4.0.0"
+<project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
+    xmlns="http://maven.apache.org/POM/4.0.0"
     xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
-  <modelVersion>4.0.0</modelVersion>
-  <parent>
-    <groupId>org.jkiss.dbeaver</groupId>
-    <artifactId>dbeaver</artifactId>
-    <version>1.0.0-SNAPSHOT</version>
-    <relativePath>../../</relativePath>
-  </parent>
-  <artifactId>org.jkiss.dbeaver.rcp.feature</artifactId>
-  <version>2.1.130-SNAPSHOT</version>
-  <packaging>eclipse-feature</packaging>
+    <modelVersion>4.0.0</modelVersion>
+    <parent>
+        <groupId>org.jkiss.dbeaver</groupId>
+        <artifactId>dbeaver</artifactId>
+        <version>1.0.0-SNAPSHOT</version>
+        <relativePath>../../</relativePath>
+    </parent>
+    <artifactId>org.jkiss.dbeaver.rcp.feature</artifactId>
+    <version>2.1.130-SNAPSHOT</version>
+    <packaging>eclipse-feature</packaging>
+
+    <build>
+        <plugins>
+            <!-- Tycho configuration -->
+            <plugin>
+                <groupId>org.eclipse.tycho</groupId>
+                <artifactId>target-platform-configuration</artifactId>
+                <version>${tycho-version}</version>
+                <configuration>
+                    <filters>
+                        <!-- Limit JNA to version 4.5. Newer version added in E4 2021-03 and it leads to JNA dups. #12149 -->
+                        <filter>
+                            <type>eclipse-plugin</type>
+                            <id>com.sun.jna</id>
+                            <restrictTo>
+                                <type>eclipse-plugin</type>
+                                <id>com.sun.jna</id>
+                                <versionRange>[4.5.1, 5.0.0]</versionRange>
+                            </restrictTo>
+                        </filter>
+                        <filter>
+                            <type>eclipse-plugin</type>
+                            <id>com.sun.jna.platform</id>
+                            <restrictTo>
+                                <type>eclipse-plugin</type>
+                                <id>com.sun.jna.platform</id>
+                                <versionRange>[4.5.1, 5.0.0]</versionRange>
+                            </restrictTo>
+                        </filter>
+                    </filters>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
+
 </project>
