--- a/plugins/org.jkiss.dbeaver.ext.oracle.ui/plugin.xml
+++ b/plugins/org.jkiss.dbeaver.ext.oracle.ui/plugin.xml
@@ -195,6 +195,7 @@
             <objectType name="org.jkiss.dbeaver.ext.oracle.model.OracleTrigger"/>
             <objectType name="org.jkiss.dbeaver.ext.oracle.model.OracleTableIndex"/>
             <objectType name="org.jkiss.dbeaver.ext.oracle.model.OracleJavaClass"/>
+            <objectType name="org.jkiss.dbeaver.ext.oracle.model.OracleJob"/>
         </editor>
         <editor id="source.definition" class="org.jkiss.dbeaver.ext.oracle.ui.editors.OracleSourceDefinitionEditor"
                 label="%editor.package.body.name" description="%editor.package.body.description" icon="#sql_text" position="additions_middle"
