#11426 Add column configuration dialog to show hidden properties
Former-commit-id: 633f8db511bf1459f8d6f4fae393077975d48c25
Former-commit-id: d85e18dfe08771c347f509e07a9c7d112154c595 [formerly b2a3f54c4e8fe6ec8faaf2db1c3426ffe2f00d7c]
Former-commit-id: 29338ce0fed45c4510a72b9b9840d2f63776ee4f

--- a/plugins/org.jkiss.dbeaver.ext.mssql.ui/plugin.xml
+++ b/plugins/org.jkiss.dbeaver.ext.mssql.ui/plugin.xml
@@ -61,6 +61,9 @@
         <configurator class="org.jkiss.dbeaver.ext.mssql.ui.config.SQLServerDatabaseConfigurator">
             <objectType name="org.jkiss.dbeaver.ext.mssql.model.SQLServerDatabase"/>
         </configurator>
+        <configurator class="org.jkiss.dbeaver.ext.mssql.ui.config.SQLServerColumnConfigurator">
+            <objectType name="org.jkiss.dbeaver.ext.mssql.model.SQLServerTableColumn"/>
+        </configurator>
         <configurator class="org.jkiss.dbeaver.ext.mssql.ui.config.SQLServerUniqueKeyConfigurator">
             <objectType name="org.jkiss.dbeaver.ext.mssql.model.SQLServerTableUniqueKey"/>
         </configurator>
