#12061 Hide SQL Editor and Database main menus in non-DBeaver perspectives
Former-commit-id: add7896d25c5a295afc4ac312b062b1c9f29307e
Former-commit-id: 06f17678661d33be739960e58fad0cf51c2a01fa [formerly f67d19cdb82e600b5b4611450dab2204aa953c9c]
Former-commit-id: 9ba7e25781ba548b146382990542f0b49dc15ba6

--- a/plugins/org.jkiss.dbeaver.core/plugin.xml
+++ b/plugins/org.jkiss.dbeaver.core/plugin.xml
@@ -490,7 +490,11 @@
         <!-- Database menu -->
         <menuContribution allPopups="false" locationURI="menu:org.eclipse.ui.main.menu?before=window">
             <menu id="dataSourceMenu" label="%menu.database">
-                <!--<visibleWhen><reference definitionId="org.jkiss.dbeaver.core.ui.datasource.editor"/></visibleWhen>-->
+                <visibleWhen>
+                    <with variable="activeWorkbenchWindow.activePerspective">
+                        <reference definitionId="DBeaverPerspectiveActive"/>
+                    </with>
+                </visibleWhen>
 
                 <separator name="driverGroup" visible="true"/>
                 <command commandId="org.jkiss.dbeaver.core.new.connection"/>
