--- a/plugins/org.jkiss.dbeaver.core/plugin.xml
+++ b/plugins/org.jkiss.dbeaver.core/plugin.xml
@@ -197,9 +197,7 @@
             </with>
         </definition>
         <definition id="org.jkiss.dbeaver.core.ui.toolbar.general.visible">
-            <with variable="activeWorkbenchWindow.activePerspective">
-                <reference definitionId="DBeaverPerspectiveActive"/>
-            </with>
+            <reference definitionId="DBeaverPerspectiveActive"/>
         </definition>
         <definition id="org.jkiss.dbeaver.core.ui.editor.transactional">
             <with variable="activeEditor">
@@ -490,11 +488,7 @@
         <!-- Database menu -->
         <menuContribution allPopups="false" locationURI="menu:org.eclipse.ui.main.menu?before=window">
             <menu id="dataSourceMenu" label="%menu.database">
-                <visibleWhen>
-                    <with variable="activeWorkbenchWindow.activePerspective">
-                        <reference definitionId="DBeaverPerspectiveActive"/>
-                    </with>
-                </visibleWhen>
+                <visibleWhen><reference definitionId="DBeaverPerspectiveActive"/></visibleWhen>
 
                 <separator name="driverGroup" visible="true"/>
                 <command commandId="org.jkiss.dbeaver.core.new.connection"/>
@@ -587,46 +581,11 @@
             </toolbar>
 
             <toolbar id="dbeaver-edit" label="%toolbar.dbeaver-edit.label">
-                <command commandId="org.eclipse.ui.file.save">
-                    <visibleWhen>
-                        <and>
-                            <test property="org.jkiss.dbeaver.core.ui.toolbarVisible" value="dbeaver-edit"/>
-                            <reference definitionId="org.jkiss.dbeaver.core.ui.datasource.editor"/>
-                        </and>
-                    </visibleWhen>
-                </command>
-                <command commandId="org.eclipse.ui.file.revert" icon="platform:/plugin/org.jkiss.dbeaver.ui/icons/file/reset.png">
-                    <visibleWhen>
-                        <and>
-                            <test property="org.jkiss.dbeaver.core.ui.toolbarVisible" value="dbeaver-edit"/>
-                            <reference definitionId="org.jkiss.dbeaver.core.ui.datasource.editor"/>
-                        </and>
-                    </visibleWhen>
-                </command>
-                <command commandId="org.eclipse.ui.edit.undo">
-                    <visibleWhen>
-                        <and>
-                            <test property="org.jkiss.dbeaver.core.ui.toolbarVisible" value="dbeaver-edit"/>
-                            <reference definitionId="org.jkiss.dbeaver.core.ui.datasource.editor"/>
-                        </and>
-                    </visibleWhen>
-                </command>
-                <command commandId="org.eclipse.ui.edit.redo">
-                    <visibleWhen>
-                        <and>
-                            <test property="org.jkiss.dbeaver.core.ui.toolbarVisible" value="dbeaver-edit"/>
-                            <reference definitionId="org.jkiss.dbeaver.core.ui.datasource.editor"/>
-                        </and>
-                    </visibleWhen>
-                </command>
-                <command commandId="org.eclipse.ui.file.refresh">
-                    <visibleWhen>
-                        <and>
-                            <test property="org.jkiss.dbeaver.core.ui.toolbarVisible" value="dbeaver-edit"/>
-                            <reference definitionId="org.jkiss.dbeaver.core.ui.datasource.editor"/>
-                        </and>
-                    </visibleWhen>
-                </command>
+                <command commandId="org.eclipse.ui.file.save"/>
+                <command commandId="org.eclipse.ui.file.revert" icon="platform:/plugin/org.jkiss.dbeaver.ui/icons/file/reset.png"/>
+                <command commandId="org.eclipse.ui.edit.undo"/>
+                <command commandId="org.eclipse.ui.edit.redo"/>
+                <command commandId="org.eclipse.ui.file.refresh"/>
             </toolbar>
 
             <toolbar id="dbeaver-connection-selector" label="%toolbar.dbeaver-datasource-selector.label">
@@ -1223,6 +1182,16 @@
                 id="org.jkiss.dbeaver.core.perspective"
                 name="%perspective.name">
         </perspective>
+    </extension>
+
+    <extension point="org.eclipse.ui.perspectiveExtensions">
+        <perspectiveExtension targetID="org.jkiss.dbeaver.core.perspective">
+            <hiddenToolBarItem id="org.eclipse.ui.file.save"/>
+            <hiddenToolBarItem id="org.eclipse.ui.file.revert"/>
+            <hiddenToolBarItem id="org.eclipse.ui.file.undo"/>
+            <hiddenToolBarItem id="org.eclipse.ui.file.redo"/>
+            <hiddenToolBarItem id="org.eclipse.ui.file.refresh"/>
+        </perspectiveExtension>
     </extension>
 
 </plugin>
