--- a/plugins/org.jkiss.dbeaver.ui.editors.sql/plugin.xml
+++ b/plugins/org.jkiss.dbeaver.ui.editors.sql/plugin.xml
@@ -738,11 +738,7 @@
         <!-- SQL editor menu -->
         <menuContribution allPopups="false" locationURI="menu:org.eclipse.ui.main.menu?after=additions">
             <menu id="SQLEditorMenu" label="%menu.sqleditor">
-                <visibleWhen>
-                    <with variable="activeWorkbenchWindow.activePerspective">
-                        <reference definitionId="DBeaverPerspectiveActive"/>
-                    </with>
-                </visibleWhen>
+                <visibleWhen><reference definitionId="DBeaverPerspectiveActive"/></visibleWhen>
 
                 <command commandId="org.jkiss.dbeaver.core.sql.editor.open"/>
                 <command commandId="org.jkiss.dbeaver.core.sql.editor.recent"/>
