#10692 Remove next/last edit positions for DBeaver perspective
Former-commit-id: 09173807501d8c75055063db7b592a5472d85155
Former-commit-id: 9d9e91e9a893f1cd9020b4cffc66f8654130b75b [formerly e85495e2ee15efde0f6d270dff3e804f86803af4]
Former-commit-id: e017d8ccc87d41b5b0f95e32c86515f767b8e931

--- a/plugins/org.jkiss.dbeaver.core/plugin.xml
+++ b/plugins/org.jkiss.dbeaver.core/plugin.xml
@@ -1180,16 +1180,11 @@
         </perspective>
     </extension>
 
-<!--
     <extension point="org.eclipse.ui.perspectiveExtensions">
         <perspectiveExtension targetID="org.jkiss.dbeaver.core.perspective">
-            <hiddenToolBarItem id="org.eclipse.ui.file.save"/>
-            <hiddenToolBarItem id="org.eclipse.ui.file.revert"/>
-            <hiddenToolBarItem id="org.eclipse.ui.file.undo"/>
-            <hiddenToolBarItem id="org.eclipse.ui.file.redo"/>
-            <hiddenToolBarItem id="org.eclipse.ui.file.refresh"/>
+            <hiddenToolBarItem id="org.eclipse.ui.edit.text.gotoNextEditPosition"/>
+            <hiddenToolBarItem id="org.eclipse.ui.edit.text.gotoLastEditPosition"/>
         </perspectiveExtension>
     </extension>
--->
 
 </plugin>
