dbeaver/dbeaver-ee#587 ERD editor context menu improvements. Object create handlers refactoring.
Former-commit-id: 7f80f42e43a52d69485c878a8c52ca20afce2d93
Former-commit-id: fe90aca25828566d8321d83e7676a6f45cb5a65b [formerly a0f1b8cebb22df48dd3384da3c1f48eb2f731cba]
Former-commit-id: 3bbccf63dcb3816200a34ffef8bb54f4e0f8e374

--- a/plugins/org.jkiss.dbeaver.ui.navigator/plugin.xml
+++ b/plugins/org.jkiss.dbeaver.ui.navigator/plugin.xml
@@ -117,7 +117,7 @@
             id="org.jkiss.dbeaver.ui.actions.ObjectPropertyTester"
             namespace="org.jkiss.dbeaver.core.object"
             properties="canOpen,canCreateSingle,canCreateMulti,canPaste,canDelete,canRename,canMoveUp,canMoveDown,canFilter,canFilterObject,hasFilter,supportsIndexCreate,supportsConstraintCreate"
-            type="org.jkiss.dbeaver.model.navigator.DBNNode"/>
+            type="org.jkiss.dbeaver.model.DBPNamedObject"/>
 
         <propertyTester
             class="org.jkiss.dbeaver.ui.navigator.ResourcePropertyTester"
