dbeaver/dbeaver-ee#587 Object create actions icons fix. ERD diagram loading pre-caches navigator model.
Former-commit-id: 5a1096fbb3f64e165bc671612abeae94beda4e8d
Former-commit-id: 26edcc201d5769d3633ad07ebe12f99bbb6e4b3d [formerly 9b013dd49ba090f0b039613c470b9f208ef22305]
Former-commit-id: 0bbecd07d157574efbc7b4fe78e90ccec14714c3

--- a/plugins/org.jkiss.dbeaver.ui.navigator/plugin.xml
+++ b/plugins/org.jkiss.dbeaver.ui.navigator/plugin.xml
@@ -306,8 +306,8 @@
         <image commandId="org.jkiss.dbeaver.ui.tools.select.connection" icon="platform:/plugin/org.jkiss.dbeaver.model/icons/tree/database.png"/>
         <image commandId="org.jkiss.dbeaver.ui.tools.select.schema" icon="platform:/plugin/org.jkiss.dbeaver.model/icons/tree/schema.png"/>
 
-        <image commandId="org.jkiss.dbeaver.navigator.create.column.index" icon="platform:/plugin/org.jkiss.dbeaver.ui/icons/create.png"/>
-        <image commandId="org.jkiss.dbeaver.navigator.create.column.constraint" icon="platform:/plugin/org.jkiss.dbeaver.ui/icons/create.png"/>
+        <image commandId="org.jkiss.dbeaver.navigator.create.column.index" icon="platform:/plugin/org.jkiss.dbeaver.model/icons/tree/index.png"/>
+        <image commandId="org.jkiss.dbeaver.navigator.create.column.constraint" icon="platform:/plugin/org.jkiss.dbeaver.model/icons/tree/constraint.png"/>
     </extension>
 
     <extension point="org.eclipse.ui.handlers">
