#11312 disable/enable table trigger tool added
Former-commit-id: a7bde72343259ac98707bf268561a838b724544b
Former-commit-id: 742d832e3ca2879976aa179b7b996d509db7c738 [formerly 28366bb3549dc0b91ad93f210baf88f964545a07]
Former-commit-id: 24900c6119a76e98b03c5151d6d380c521a848af

--- a/plugins/org.jkiss.dbeaver.ext.oracle/plugin.xml
+++ b/plugins/org.jkiss.dbeaver.ext.oracle/plugin.xml
@@ -521,6 +521,14 @@
             <datasource id="oracle"/>
             <objectType name="org.jkiss.dbeaver.ext.oracle.model.OracleMaterializedView"/>
         </task>
+        <task id="oracleToolTriggerEnable" name="Enable trigger" description="Enable trigger" icon="platform:/plugin/org.jkiss.dbeaver.model/icons/tree/admin.png" type="oracleTool" handler="org.jkiss.dbeaver.ext.oracle.tasks.OracleToolTableTriggerEnable">
+            <datasource id="oracle"/>
+            <objectType name="org.jkiss.dbeaver.ext.oracle.model.OracleTableTrigger" if="object.status == 'DISABLED'"/>
+        </task>
+        <task id="oracleToolTriggerDisable" name="Disable trigger" description="Disable trigger" icon="platform:/plugin/org.jkiss.dbeaver.model/icons/tree/admin.png" type="oracleTool" handler="org.jkiss.dbeaver.ext.oracle.tasks.OracleToolTableTriggerDisable">
+            <datasource id="oracle"/>
+            <objectType name="org.jkiss.dbeaver.ext.oracle.model.OracleTableTrigger" if="object.status == 'ENABLED'"/>
+        </task>
     </extension>
 
 </plugin>
