--- a/plugins/org.jkiss.dbeaver.ext.oracle.ui/plugin.xml
+++ b/plugins/org.jkiss.dbeaver.ext.oracle.ui/plugin.xml
@@ -307,6 +307,24 @@
                     singleton="false">
                 <objectType name="org.jkiss.dbeaver.ext.oracle.model.OracleTable"/>
             </tool>
+            <tool
+                    class="org.jkiss.dbeaver.ext.oracle.ui.tools.maintenance.OracleToolTriggerDisable"
+                    description="Disable trigger(s)"
+                    id="org.jkiss.dbeaver.ext.oracle.ui.tools.maintenance.OracleToolTriggerDisable"
+                    group="org.jkiss.dbeaver.ext.oracle.ui.tools.maintenance"
+                    label="Disable trigger"
+                    singleton="false">
+                <objectType name="org.jkiss.dbeaver.ext.oracle.model.OracleTableTrigger" if="object.status == 'ENABLED'"/>
+            </tool>
+            <tool
+                    class="org.jkiss.dbeaver.ext.oracle.ui.tools.maintenance.OracleToolTriggerEnable"
+                    description="Enable trigger(s)"
+                    id="org.jkiss.dbeaver.ext.oracle.ui.tools.maintenance.OracleToolTriggerEnable"
+                    group="org.jkiss.dbeaver.ext.oracle.ui.tools.maintenance"
+                    label="Enable trigger"
+                    singleton="false">
+                <objectType name="org.jkiss.dbeaver.ext.oracle.model.OracleTableTrigger" if="object.status == 'DISABLED'"/>
+            </tool>
         </tools>
     </extension>
 
