#11575 add view triggers for mssql
Former-commit-id: 9ff746f8728042bdad6a356ab3551b0ae0c215cd
Former-commit-id: 36fd701d957f2092dba88772292f73498617d6df [formerly dca6af707f32b566753f3a4c5ec08df9a8b9c4c8]
Former-commit-id: f0f336dcd95edef711d9bc0f4250433886a5976e

--- a/plugins/org.jkiss.dbeaver.ext.mssql.ui/plugin.xml
+++ b/plugins/org.jkiss.dbeaver.ext.mssql.ui/plugin.xml
@@ -131,16 +131,16 @@
                     group="org.jkiss.dbeaver.ext.mssql.ui.tools.maintenance"
                     label="Disable trigger(s)"
                     singleton="false">
-                <objectType name="org.jkiss.dbeaver.ext.mssql.model.SQLServerTableTrigger" if="!object.disabled"/>
+                <objectType name="org.jkiss.dbeaver.ext.mssql.model.SQLServerTableTrigger" if="object.disableable"/>
             </tool>
-              <tool
+            <tool
                     class="org.jkiss.dbeaver.ext.mssql.ui.tools.maintenance.SQLServerToolTriggerEnable"
                     description="Enable trigger"
                     id="org.jkiss.dbeaver.ext.mssql.ui.tools.maintenance.SQLServerToolTriggerEnable"
                     group="org.jkiss.dbeaver.ext.mssql.ui.tools.maintenance"
                     label="Enable trigger"
                     singleton="false">
-                <objectType name="org.jkiss.dbeaver.ext.mssql.model.SQLServerTableTrigger" if="object.disabled"/>
+                <objectType name="org.jkiss.dbeaver.ext.mssql.model.SQLServerTableTrigger" if="object.enableable"/>
             </tool>
         </tools>
     </extension>
