--- a/plugins/org.jkiss.dbeaver.ext.mssql.ui/plugin.xml
+++ b/plugins/org.jkiss.dbeaver.ext.mssql.ui/plugin.xml
@@ -131,7 +131,7 @@
                     group="org.jkiss.dbeaver.ext.mssql.ui.tools.maintenance"
                     label="Disable trigger(s)"
                     singleton="false">
-                <objectType name="org.jkiss.dbeaver.ext.mssql.model.SQLServerTableTrigger" if="object.disableable"/>
+                <objectType name="org.jkiss.dbeaver.ext.mssql.model.SQLServerTableTrigger" if="object.canDisable()"/>
             </tool>
             <tool
                     class="org.jkiss.dbeaver.ext.mssql.ui.tools.maintenance.SQLServerToolTriggerEnable"
@@ -140,7 +140,7 @@
                     group="org.jkiss.dbeaver.ext.mssql.ui.tools.maintenance"
                     label="Enable trigger"
                     singleton="false">
-                <objectType name="org.jkiss.dbeaver.ext.mssql.model.SQLServerTableTrigger" if="object.enableable"/>
+                <objectType name="org.jkiss.dbeaver.ext.mssql.model.SQLServerTableTrigger" if="object.canEnable()"/>
             </tool>
         </tools>
     </extension>
