dbeaver/dbeaver-ee#587 SQL editor presentation selection provider. ERD props
Former-commit-id: 50733aa0f8ec250f1f31b04fd1345343651206c7
Former-commit-id: bf0be10f2f6ef067b64e71da17e1036da614cbbe [formerly 8fc84cd50ebb5d83094c91518ee95a607123bfbb]
Former-commit-id: 1e432072c5957c3744cba0652e4cf318e4e61906

--- a/plugins/org.jkiss.dbeaver.erd.ui/plugin.xml
+++ b/plugins/org.jkiss.dbeaver.erd.ui/plugin.xml
@@ -172,7 +172,7 @@
              class="org.jkiss.dbeaver.erd.ui.action.ERDEditorPropertyTester"
              id="org.jkiss.dbeaver.erd.ui.action.ERDEditorPropertyTester"
              namespace="org.jkiss.dbeaver.erd.ui.editor"
-             properties="canUndo,canRedo,canDelete,editable"
+             properties="canUndo,canRedo,canDelete,editable,supportsStructureEdit"
              type="org.jkiss.dbeaver.erd.ui.editor.ERDEditorPart">
        </propertyTester>
     </extension>
