--- a/plugins/org.jkiss.dbeaver.erd.ui/plugin.xml
+++ b/plugins/org.jkiss.dbeaver.erd.ui/plugin.xml
@@ -172,7 +172,7 @@
              class="org.jkiss.dbeaver.erd.ui.action.ERDEditorPropertyTester"
              id="org.jkiss.dbeaver.erd.ui.action.ERDEditorPropertyTester"
              namespace="org.jkiss.dbeaver.erd.ui.editor"
-             properties="canUndo,canRedo,canDelete,editable,supportsStructureEdit"
+             properties="canUndo,canRedo,canDelete,editable,supportsStructureEdit,editMode"
              type="org.jkiss.dbeaver.erd.ui.editor.ERDEditorPart">
        </propertyTester>
     </extension>
