--- a/plugins/org.jkiss.dbeaver.ui.navigator/src/org/jkiss/dbeaver/ui/internal/UINavigatorMessages.properties
+++ b/plugins/org.jkiss.dbeaver.ui.navigator/src/org/jkiss/dbeaver/ui/internal/UINavigatorMessages.properties
@@ -59,7 +59,7 @@ dialog_project_create_wizard_error_already_exists = Project "{0}" already exists
 dialog_project_create_wizard_error_cannot_create = Create error
 dialog_project_create_wizard_error_cannot_create_message = Cannot create project
 dialog_project_create_wizard_title = Project Create Wizard
-dialog_project_goto_object_title = Open Database Object in
+dialog_project_goto_object_title = Open Database Object in ''{0}''
 dialog_project_goto_object_checkbox_search_in_comments = Search in comments
 
 registry_entity_editor_descriptor_description = Object properties
